--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,25 @@
   }
 }
 
+p {
+  color: oklch(0.707 0.022 261.325);
+}
+
+
+p, h3, h4{
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.margin_section {/* Se aplica en todos los section */
+  @apply pt-48 px-5 lg:px-10; 
+}
+
+.max_w_section {/* Se aplica en todos los section */
+  @apply max-w-[1400px];
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
